修改了页面，把图片放到了cos中，接下来通过配置文件获取cos的地址，并可以在页面中直接使用

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,150 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="favicon.ico">
-  <title>一颗草莓</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <script src="js/jquery-3.5.1.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/vue.js"></script>
-  <script src="layer/layer.js"></script>
-  <style>
-    body {
-      padding-top: 20px;
-      padding-bottom: 20px;
-    }
-    .navbar {
-      margin-bottom: 20px;
-    }
-  </style>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>一颗草莓</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <!-- 灯箱效果插件 -->
+<!--        <link href="css/magnific-popup.min.css" rel="stylesheet" />-->
+<!--        <link rel="stylesheet" href="css/bootstrap.css">-->
+        <link href="css/styles.css" rel="stylesheet" />
+        <script src="js/jquery-3.5.1.js"></script>
+        <script src="js/bootstrap.js"></script>
+        <script src="plugins/jquery.easing.min.js"></script>
+        <script src="plugins/jquery.magnific-popup.min.js"></script>
+        <script src="js/common.js"></script>
+        <script src="js/scripts.js"></script>
+        <script src="js/vue.js"></script>
+        <style>
 
-<body>
-  <div id="app">
-    <div class="container">
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Project name</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">首页</a></li>
-              <li><a href="#">联系我</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">下拉列表 <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">第一行</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li class="dropdown-header">分割线</li>
-                  <li><a href="#">第二行</a></li>
-                </ul>
-              </li>
-            </ul>
-            <ul v-if="!isLogin" class="nav navbar-nav navbar-right">
-              <li><a href="javascript:void(0);" onclick="vm.userLogin()">登录</a></li>
-              <li><a href="javascript:void(0);">注册</a></li>
-            </ul>
-            <ul v-else class="nav navbar-nav navbar-right">
-              <li><a href="/login">刘鑫</a></li>
-              <li><a href="javascript:void(0);" onclick="vm.logout()">退出</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <div class="jumbotron">
-        <h1>Hello World</h1>
-        <p></p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="" role="button">点我 &raquo;</a>
-        </p>
-      </div>
-    </div>
-  </div>
-</body>
+        </style>
+        <script>
+            function login(){
+                console.log(cos);
+                $("#mainView").css("display","none");
+                $("#mainLogin").css("display","block")
+            }
+            function index() {
+                $("#mainView").css("display","block");
+                $("#mainLogin").css("display","none")
+            }
+            function register(){
+
+            }
+        </script>
+    </head>
+    <body id="app">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand js-scroll-trigger" href="javascript:void(0);" onclick="index()">一颗草莓</a>
+<!--                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>-->
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto my-2 my-lg-0">
+<!--                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">关于</a></li>-->
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="javascript:void(0);">关于</a></li>
+<!--                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">服务中心</a></li>-->
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="javascript:void(0);">服务中心</a></li>
+<!--                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio" onclick="login()">登录</a></li>-->
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="javascript:void(0);" onclick="login()">登录</a></li>
+<!--                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">注册</a></li>-->
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="javascript:void(0);">注册</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Masthead-->
+        <header id="mainView" class="masthead" style="background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url('https://ykcm-1259164643.cos.ap-beijing.myqcloud.com/static/img/bg-masthead.jpg')">
+            <div class="container h-100">
+                <div class="row h-100 align-items-center justify-content-center text-center">
+                    <div class="col-lg-10 align-self-end">
+                        <h1 class="text-uppercase text-white font-weight-bold">Your Favorite Source of Free Bootstrap Themes</h1>
+                        <hr class="divider my-4" />
+                    </div>
+                    <div class="col-lg-8 align-self-baseline">
+                        <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <header id="mainLogin" class="masthead" style="background-color: red;display: none">
+
+        </header>
+<!--        关于 -->
+        <!-- About-->
+        <!--<section class="page-section bg-primary" id="about">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <hr class="divider light my-4" />
+                        <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
+                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+                    </div>
+                </div>
+            </div>
+        </section>-->
+<!--        服务中心-->
+        <!-- Services-->
+        <!--<section class="page-section" id="services">
+            <div class="container">
+                <h2 class="text-center mt-0">At Your Service</h2>
+                <hr class="divider my-4" />
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Sturdy Themes</h3>
+                            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Up to Date</h3>
+                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Ready to Publish</h3>
+                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Made with Love</h3>
+                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>-->
+<!--        登录-->
+        <!-- Portfolio-->
+        <!--<div id="portfolio">
+            <div class="container-fluid p-0">
+                <div class="row no-gutters">
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="https://ykcm-1259164643.cos.ap-beijing.myqcloud.com/static/img/portfolio/fullsize/1.jpg">
+                            <img class="img-fluid" src="https://ykcm-1259164643.cos.ap-beijing.myqcloud.com/static/img/portfolio/thumbnails/1.jpg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="https://ykcm-1259164643.cos.ap-beijing.myqcloud.com/static/img/portfolio/fullsize/2.jpg">
+                            <img class="img-fluid" src="https://ykcm-1259164643.cos.ap-beijing.myqcloud.com/static/img/portfolio/thumbnails/2.jpg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="https://ykcm-1259164643.cos.ap-beijing.myqcloud.com/static/img/portfolio/fullsize/3.jpg">
+                            <img class="img-fluid" src="https://ykcm-1259164643.cos.ap-beijing.myqcloud.com/static/img/portfolio/thumbnails/3.jpg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="https://ykcm-1259164643.cos.ap-beijing.myqcloud.com/static/img/portfolio/fullsize/4.jpg">
+                            <img class="img-fluid" src="https://ykcm-1259164643.cos.ap-beijing.myqcloud.com/static/img/portfolio/thumbnails/4.jpg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="https://ykcm-1259164643.cos.ap-beijing.myqcloud.com/static/img/portfolio/fullsize/5.jpg">
+                            <img class="img-fluid" src="https://ykcm-1259164643.cos.ap-beijing.myqcloud.com/static/img/portfolio/thumbnails/5.jpg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="https://ykcm-1259164643.cos.ap-beijing.myqcloud.com/static/img/portfolio/fullsize/6.jpg">
+                            <img class="img-fluid" src="https://ykcm-1259164643.cos.ap-beijing.myqcloud.com/static/img/portfolio/thumbnails/6.jpg" alt="" />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>-->
+        <!-- Call to action-->
+        <!--<section class="page-section bg-dark text-white">
+            <div class="container text-center">
+                <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
+                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
+            </div>
+        </section>-->
+<!--        注册-->
+        <!-- Contact-->
+        <!--<section class="page-section" id="contact">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="mt-0">Let's Get In Touch!</h2>
+                        <hr class="divider my-4" />
+                        <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+                        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
+                        <div>+8618600000000</div>
+                    </div>
+                    <div class="col-lg-4 mr-auto text-center">
+                        <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
+                        &lt;!&ndash; Make sure to change the email address in BOTH the anchor text and the link target below!&ndash;&gt;
+                        <a class="d-block" href="mailto:contact@yourwebsite.com">776269572@qq.com</a>
+                    </div>
+                </div>
+            </div>
+        </section>-->
+        <!-- Footer-->
+        <footer class="bg-light py-5">
+            <div class="container"><div class="small text-center text-muted">
+                <a href="">Copyright © 2020 - Start Bootstrap</a>
+            </div></div>
+        </footer>
+    </body>
 </html>
-<script>
-  var vm = new Vue({
-    el:"#app",
-    data:{
-      isLogin: false
-    },
-    mounted:function () {
-
-    },
-    methods:{
-      login: function (){
-        layer.open({
-          type: 2,
-          content: 'login.html',
-          area: ['100%', '100%'],
-          maxmin: true
-        });
-      },
-      register: function (){
-
-      },
-      logout: function (){
-        $.get('/user/logout', function(r){
-          if(r.code == 0){
-            vm.isLogin = false;
-          }
-        });
-      },
-      userLogin: function(){
-        layer.open({
-          title: '登录',
-          btn: ['确定'],
-          content: /*'<div class="layui-form-item">' +*/
-                  '<div class="form-group input-search-start">' +
-                  '<label for="username" class="sr-only">用户名</label>' +
-                  '<input type="text" id="username" name="username" class="form-control" placeholder="用户名" required autofocus>' +
-                  '<label for="password" class="sr-only">密码</label>' +
-                  '<input type="password" id="password" name="password" class="form-control" placeholder="密码" required>' +
-                  '' +
-                  '' +
-                  '' +
-                  '</div>',
-          yes: function(index){
-            var username = $("#username").val();
-            var password = $("#password").val();
-            var params = {
-              "username":username,
-              "password":password
-            };
-            console.log(params);
-            $.ajax({
-              type: "POST",
-              dataType: "json",
-              url: "/user/login",
-              contentType : "application/json",
-              data: JSON.stringify(params),
-              success: function(r){
-                if(r.code == 0){
-                  vm.isLogin = true;
-                  layer.close(index);
-                }else{
-                  alert(r.msg);
-                }
-              }
-            });
-          }
-        });
-      },
-    },
-    created(){
-      window.vm = this;
-    }
-  });
-</script>
